# kb

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-build.yml
docs/: src_structure.md
infra/docker/: api.Dockerfile
scripts/: run_evaluation.py  run_rag.py  ui.html
src/agentic_kb/api/schemas/: __init__.py  documents.py  ingestion.py  retrieval.py
src/agentic_kb/chunking/: __init__.py  constant_size.py  contextual.py  recursive.py  schemas.py
src/agentic_kb/config/: __init__.py  env.py
src/agentic_kb/embeddings/: __init__.py  indexer.py  models.py  schemas.py  service.py
src/agentic_kb/evaluation/: __init__.py  judge.py  retrieval.py
src/agentic_kb/generation/: __init__.py  answering.py
src/agentic_kb/metadata/: schemas.py
src/agentic_kb/parsing/: __init__.py  base.py  csv.py  doc.py  docling.py  docx.py  html.py  json.py  markdown.py  pdf.py  plain_text.py  registry.py  schemas.py  xlsx.py
src/agentic_kb/providers/: __init__.py  models.py
src/agentic_kb/retrieval/: __init__.py  chunk_store.py  citations.py  context.py  dense.py  hybrid.py  pipeline.py  reranking.py  sparse.py
src/agentic_kb/schemas/: __init__.py  chunks.py  documents.py  metadata.py  search.py  vectors.py
src/agentic_kb/storage/: schemas.py
src/agentic_kb/vector_store/: __init__.py  base.py  faiss.py  hnsw.py  local_faiss.py
