[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-kb"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "jieba>=0.42",
  "python-docx>=1.1",
  "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[project.optional-dependencies]
parsing = [
  "docling",
  "lxml",
  "openpyxl",
  "pillow",
  "pymupdf",
  "pytesseract",
]
reranking = [
  "sentence-transformers",
]
providers = [
  "openai",
]
server = [
  "fastapi",
  "uvicorn",
]
vector = [
  "faiss-cpu",
  "numpy",
]
